Fixed all hovers not showing Apparently it had to do with the Hero Selection Panel container still taking up 100% width and height

--- a/panorama/styles/hero_selection.css
+++ b/panorama/styles/hero_selection.css
@@ -1,6 +1,6 @@
 /* General layout
 =================================================================*/
-.MainPanel {
+.MainHeroSelectionPanel {
   width: 100%;
   height: 100%;
 }
